--- a/_posts/life/2020-01-01-2020plan.md
+++ b/_posts/life/2020-01-01-2020plan.md
@@ -24,7 +24,7 @@ description: 主要涉及工作，读书，个人几个方面的未来规划
 为了实现终极目标，需要实现的小目标：
 
 1. 2020-03-01之前初步入坑股市，掌握其他理财知识，起码做到每一笔开销心里有数
-2. 2020-03-01之前初步入坑股市，掌握其他理财知识，起码做到每一笔开销心里有数
+2. 2020-04-01之前初步掌握强化学习，读完所有必读paper，有上手项目
 3. 走留学生落户通道，落户上海
 4. 每天关注财经消息，有自己的想法
 
