add stock monitor

--- a/_posts/life/2020-02-02-stock.md
+++ b/_posts/life/2020-02-02-stock.md
@@ -152,3 +152,26 @@ Eilliott归纳整个市场的价格波形形态，无论趋势的层级大小，
 
 1. 如果在整个浪型循环中，第二个浪以简单的形态出现，则第四个浪多数会以较为复杂的形态出现
 2. 股市在上升一段后进入调整期，尤其是当调整浪乃属于第四浪的时候，多数会在较低一级的第四浪内完成，通常情况下会在接近终点附近完结
+
+
+
+## 量价关系
+
+### 总体关系
+
+1. 交易量和交易价格并没有直接的预测关系，交易量大说明分歧大，成交量小说明分歧小
+
+2. 大盘持续下跌肯定会导致成交量萎缩，被套的不想割肉，新韭菜不想进场；持续上涨，有盈余一定会导致成交量不断放大，获利盘抛售，新韭菜追高
+3. 价格剧烈变化，缩量放量都可能，放量是大量抛售，缩量是巨大利空，市场看法一致
+4. 如果价格没有剧烈波动，成交量不断放大，说明可能存在资金介入或者出逃，趋势可能反转
+
+### 具体情形
+
+- 底部放量要关注
+- 高位放量要谨慎
+- 底部缩量要跟踪(成交缩量为标志)
+- 高位缩量戒急躁
+
+reference：
+
+[知乎：成交量与股票的涨跌幅有什么关系吗?](https://www.zhihu.com/question/26103768)
