--- a/_posts/life/2020-01-01-2020plan.md
+++ b/_posts/life/2020-01-01-2020plan.md
@@ -15,6 +15,10 @@ description: 主要涉及工作，读书，个人几个方面的未来规划
 
 - 一个月一本书，暂定，视情况调整
 
+------------------------------2020.04.01 更新---------------------------------
+
+上面的这些目标好像又因为“不可抗力”耽误了
+
 
 
 ## 新一年，新目标
@@ -27,6 +31,12 @@ description: 主要涉及工作，读书，个人几个方面的未来规划
 2. 2020-04-01之前初步掌握强化学习，读完所有必读paper，有上手项目
 3. 走留学生落户通道，落户上海
 4. 每天关注财经消息，有自己的想法
+
+---------------------------2020.04.01更新----------------------------------
+
+股市入坑，真坑
+
+强化学习刚刚入门，paper没有读，过了一遍，正在做五子棋项目
 
 
 
