拆分一站式机器学习为3个部分，优化其他部分文章

--- a/_posts/life/2020-01-01-2020plan.md
+++ b/_posts/life/2020-01-01-2020plan.md
@@ -19,7 +19,9 @@ description: 主要涉及工作，读书，个人几个方面的未来规划
 
 上面的这些目标好像又因为“不可抗力”耽误了
 
+-----------------------------2020.09.10 更新----------------------------------
 
+夏天天气热，竟然真的8点醒，8点半起，神奇； 健身在8月也跑过几次步，后来也是没有坚持下去，哎；书目前还是看了2，3本离一个月一本还是有很多差距的。
 
 ## 新一年，新目标
 
@@ -38,9 +40,11 @@ description: 主要涉及工作，读书，个人几个方面的未来规划
 
 强化学习刚刚入门，paper没有读，过了一遍，正在做五子棋项目
 
+-----------------------------2020.09.10 更新----------------------------------
 
+20万想太多，10万差不多吧，股市回本，半退市，开始定投基金。强化学习五子棋项目算是做了个demo，好久没有碰了，落户走到等待批复这一步，应该还有个半个月就能下来，只是时间问题了。财经消息倒是没有怎么了解，理财的基础知识补了一补
 
-#### 书单
+### 书单
 
 - 人类简史三部曲
 - 光荣与梦想
@@ -48,3 +52,10 @@ description: 主要涉及工作，读书，个人几个方面的未来规划
 - 智商税
 - 大众心理学
 - 枪炮，病菌与钢铁
+
+-----------------------------2020.09.10 更新----------------------------------
+
+更新书单
+
+- 后真相时代（看完，待整理）
+- 指数基金定投指南（看完，待整理）
