--- a/_posts/advertisement/2020-12-27-ads.md
+++ b/_posts/advertisement/2020-12-27-ads.md
@@ -6,10 +6,104 @@ tags: advertisement
 description: 
 ---
 
-## 腾讯
+## 广告基础知识
 
-### 转化率预估
+### 理解
 
+广告平台最核心的目标在于针对流量(用户)，分配资源(广告)，从中向广告主按某种模式收取服务费。对于平台来说，流量是固有的，不变现就是浪费。广告主在这个过程中的收益，最理想情况是在有限的预算下最大化转化；用户并没有明显的收益，不能说用户看到更符合自己的广告展示就是正向收益，对于用户来说，没有广告才是最大的收益，但广告平台不能做的太过分，不然用户体验下降，用户流失，影响长短期收益；对于广告平台来说，收益就是广告主的“服务费”，对于一个流量，广告A比广告B更可能转化，但是广告B如果转化能给平台带来更多的收益，此时需要平台做出匹配度和收益的权衡，按照某种指标量化综上，广告平台是toB业务，主要服务对象是广告主。
+
+广告和推荐的区别和联系
+- 推荐主要服务对象是用户，提升用户体验，留存，点击率，toC业务；广告的服务对象是广告主，提升广告主转化，帮助广告主控制成本，toB业务。
+- 广告场景是一个“拍卖”场景，不同的广告主争抢一个优质广告位时，自然出现了--竞价。而推荐场景不需要竞价，推荐服务和内容其实是属于同一平台下，谁更适合用户，就推谁，没有商业化的衡量。
+- 推荐和广告的本质其实都是在有限的展示位下，为物料最优排序，推荐是物料可以是文章图片或者视频等，广告的物料就是广告主的广告。服务的最终目标就是效果转化，推荐的效果可以是点击率或者用户停留时长，广告的转化可以是点击，下载，安装等。
+- 推荐和广告其实是相辅相成的关系，好的信息流或者其他推荐服务提升用户留存，拉新，延长用户停留时长，相当于扩大了可供商业化变现的“养料”，好的广告服务，能给广告主带来优质流量，提升广告主的转化，吸引更多的广告主在该平台上投放广告，增大平台收入。
+
+### 计费方式
+
+CPM：按曝光一千次收费，不为转化效果负责，适合品牌广告
+CPC：按点击收费，仅为转化中间层，不为深度转化负责
+CPA：按“动作”收费，一般指下单，下载，付费等转化动作
+CPD：按天计费，当然粒度可以是小时或者星期，不为转化负责
+CPS：按销售额收费，类似抽成模式
+
+最开始广告的计费模式以CPM为主，即只负责曝光，不负责转化。对于广告主来说，当然看重的其实是后续的深度转化，对于广告平台来说，看重的是获得更高的收益。综合两者的诉求，由平台方承担匹配风险，提供点击销售CPC模式，将以前**以广告位为资源单位的销售模式转变为广告位对应人群的销售**，由于平台方有大量精确的用户信息，经过数据挖掘，精准营销，流量的整体利用效率当然会更高。那平台方的收益点在哪里呢？ 毕竟之前只管曝光收钱，现在还要承担风险，以点击收钱。当匹配风险由广告主承担，更多小众广告主愿意投放更加精准的广告，毕竟小广告主承担预算损失的能力有限，更加愿意以最小的成本，获得更加精准的流量，产生更多的转化，而且对于某个广告主来说的优质流量对另一个广告主来说可能毫无价值，广告平台借此可以把流量更加精准的售卖获得更高的价值，另一方面，对于某个优质流量，多个广告主相互竞争，竞价排名，推高平台收益。如果更进一步，平台对转化负责，广告平台需要更加精准的用户分析，广告主风险更低，吸引更多投放。
+
+### 广告类型
+
+**合约广告**
+广告平台必须满足事先约定的条件，广告主才会支付相应的广告费，以CPM结算方式为例，例如可以约定一个月内必须达到1000万曝光量，每1000曝光10块钱。有两个重要的点，规定时间内保底的曝光量和千次曝光的费用。对于广告平台来说，有三个难点
+
+1）首先就是衡量自己的现有剩余资源和未来的资源，看到底是否能满足广告主的要求，毕竟如果满足不了，到时候事做了，钱没拿到。
+2）对于相同或相似定向条件的不同合约广告，资源如何分配使得多个广告的合约条件都能得到满足。
+3）如何监控曝光量，确保曝光量的准确。对于平台，广告主信任广告平台，不会质疑广告平台给出的曝光数据；如果是大量的小流量平台，广告主对于曝光数据是不完全相信的，就会找第三方平台去监控流量，第三方平台会通过各种方法获得平台的曝光量，辅助广告主去决策是否被骗。
+
+**搜索广告**
+门户网站天然就有广告位，各个频道的广告位也各有各的定位，在这个时期，通常采用合约模式。对比门户网站，搜索入口流量过于分散，显然以保量为服务目标的合约模式不再适用。但是搜索广告的优势在于用户意图非常明显，更容易理解用户诉求，换句话说，以转化或点击为目标的效果广告更加适合搜索广告。
+
+**竞价广告**
+竞价广告主要有三种竞价机制
+
+广义第一价格(Generalized First Price)
+广告主各自报价，彼此看不到他人的出价，只能看出最终是否拍上资源，按照自己的报价成交。因为广告的拍卖周期很短，这里面就有操作空间。只需要比第二名高一个最小出价单位就行。那就可以通过反复的尝试找到第二名的出价临界值，在此基础上加上一个最小出价单位就行了。单个广告主甚至可以自己投放N个竞价单子，这样其他竞对的出价就很容易得知。不同广告主勾心斗角，不断尝试竞对的出价，以节约成本，对平台来说，流量利用效率很低。
+
+广义第二价格(Generalized Second Price)
+竞价逻辑和GFP一致，只是成交价格以第二价格成交，此时不同广告主只需要衡量自己的投放资源和ROI要求， 就可以放心大胆的出价。不用反复试探，广告平台自动帮广告主完成了试探的过程。对于广告平台来说，一是知道了不同广告主的真实出价，另一个是省去了广告主之间的勾心斗角，效率变高。
+
+VCG(Vickrey-Clarke-Groves)
+以三个创始人名字命名的竞价机制，计算十分复杂，现实中很少使用。
+
+**Reference**<br>[数据虫巢：推荐广告系列](https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzAxMjM2MTY0OQ==&action=getalbum&album_id=1337224273634738176&scene=173&from_msgid=2650474085&from_itemidx=1&count=3#wechat_redirect)
+
+## 广告定向
+
+**地域定向(geo-target)** 
+所有广告系统都必须支持的一种定向，地域定向可以被理解成一种上下文定向，计算简单，查表就行，例如定向把广告投放到上海的人群
+
+**人口属性定向(demographical targeting)**
+基于人群标签的投放，标签包括但不限于年龄，性别，教育程度，收入水平等。通常人口属性的标签准确率不高。
+
+**频道定向(channel targeting)**
+按照广告平台的内容分类体系，对不同渠道投放不同的广告，例如历史，军事，美妆等不同频道，适合垂类媒体。
+
+**上下文定向(context targeting)**
+根据网页具体内容来匹配广告，匹配粒度可以是关键词，主题或者分类。覆盖面广，不依赖于用户信息，依赖当前页面信息即可。
+
+**行为定向(behaviorial targeting)**
+上下文定向可以看成用户单词访问的行为定向，行为定向可以理解成一串上下文定向的融合。
+
+**精确位置定向(hyper-local targeting)**
+在移动设备上时，有可能能拿到十分精确的位置信息，精度可以达到街区甚至米级。适合区域性强的小广告主，例如商场内的商铺促销广告。
+
+**重定向(retargeting)**
+对某个广告主的访客投放广告，例如用户访问淘宝之后返回百度，搜索某个商品，百度会像淘宝请求，淘宝知道用户的行为，返回某个广告物料给百度进行展示。覆盖面很小。
+
+**新客推荐定向(look-alike targeting)**
+根据广告主提供的种子用户信息，广告平台结合用户行为数据找到相似的潜在客户。主要方式有三种
+
+**基于用户画像**
+给人群打标签，利用相同标签找到目标人群
+
+**基于分类模型**
+以种子用户作为正样本，DMP平台上非种子用户作为负样本，训练二分类模型，利用模型对用户筛选
+
+**基于社交网络**
+利用种子用户的社交关系，把种子用户的标签扩展到社区好友，扩展标签人群
+
+**Reference**<br>[什么是精准人群定向](http://www.woshipm.com/operate/768797.html)<br>[lookalike到底是什么？](https://www.zhihu.com/question/43566578/answer/891387342)
+
+## 广告召回
+
+### FM
+
+![](/assets/img/ads/FM.png)
+
+FM模型引入两两特征组合，对于每一个特征学习一个特征向量，两两组合特征的权重等于两个特征向量的内积，避免了大规模稀疏数据时，很多权重为0的问题。
+
+## CTR/CVR预估
+
+### 腾讯
+
+**转化率预估技术在腾讯广告业务中的应用与挑战**
 参考文献仅提供展示的ppt，没有提供详细说明，只能从ppt上展示的信息推测一二。传统互联网效果广告的按点击出价模式，广告主的真实诉求其实是更深度的转化行为，但该诉求没有得到表达。利用转化率预估技术，搭建智能出价产品，允许广告主按照目标转化出价。
 
 ![](/assets/img/ads/Tencent-ads-framework.png)
@@ -23,7 +117,6 @@ eCPM = pCTR x pCVR x SmartBid， 在精排阶段统一以eCPM排序，eCPM解释
 ![](C:\Users\jasper\Documents\GitHub\weiqi-jiang.github.io\assets\img\ads\tencent-ads.png)
 
 对比CPC和oCPA模式
-
 - 在投放环境稳定时，由广告平台主导的oCPA模式可以从全局角度最优化。
 - 在环境变化时，广告平台也比广告主要提早知晓，能更及时的变更。(通常广告主的数据依赖广告平台回传)
 - oCPA模式只能设置期望转化成本，满足转化成本通常意味着不能最大化订单，对于想冲量的广告主来说，效果可能不好。
@@ -38,10 +131,34 @@ eCPM = pCTR x pCVR x SmartBid， 在精排阶段统一以eCPM排序，eCPM解释
 
 **Reference**<br>[转化率预估技术在腾讯广告业务中的应用与挑战](https://www.infoq.cn/article/bzxzmz*4y1uu0z7bqsq1)
 
-## 广告定向
+### 其他
 
-**地域定向(geo-target)** 
+#### 程序化广告交易中的点击率预估
 
-所有广告系统都必须支持的一种定向，地域定向可以被理解成一种上下文定向，计算简单，查表就行
+整体框架图如下
 
-人口属性定向()
+![](/assets/img/ads/PCTR-FRAMEWORK.png)
+
+**step 1. 数据探索**
+广告场景可以抽象为"在某**场景**下，通过某**媒体**向某**用户**展示某**广告**"那么特征构建或者挖掘就围绕着这四个维度；
+**场景**： 何时何地，上下文信息，设备，浏览器等
+**媒体**：online、h5，频道，广告位信息
+**广告**： 广告主特征，标签等
+**用户**：用户画像，当前用户行为
+
+**step 2. 特征组合**
+categorical features: 高维稀疏，适合FM
+ordinal / numerical features 低维稠密适合Tree based model
+那么不妨合并，模型级联
+
+![](/assets/img/ads/gbdt+fm.png)
+
+**step 3. CTR预测可信度**
+某类特征非0值的数量太少时，虽然说模型会给出一个看似合理的CTR预估值，但是这个值肯定会被其他特征拉偏。所以置信度和非零训练集的数量是正相关的$n_i$表示第$i$维特征非零取值的样本个数，根据实际业务情况和先验知识最终确定。
+
+$$
+confidence \propto n_i
+$$
+
+**Reference**<br>[程序化广告交易中的点击率预](https://www.cnblogs.com/Matrix_Yao/p/4773221.html)
+
