--- a/_posts/advertisement/2020-12-27-ads.md
+++ b/_posts/advertisement/2020-12-27-ads.md
@@ -18,11 +18,18 @@ description:
 
 广告平台最核心的目标在于针对流量(用户)，分配资源(广告)，从中向广告主按某种模式收取服务费。对于平台来说，流量是固有的，不变现就是浪费。广告主在这个过程中的收益，最理想情况是在有限的预算下最大化转化；用户并没有明显的收益，不能说用户看到更符合自己的广告展示就是正向收益，对于用户来说，没有广告才是最大的收益，但广告平台不能做的太过分，不然用户体验下降，用户流失，影响长短期收益；对于广告平台来说，收益就是广告主的“服务费”，对于一个流量，广告A比广告B更可能转化，但是广告B如果转化能给平台带来更多的收益，此时需要平台做出匹配度和收益的权衡，按照某种指标量化综上，广告平台是toB业务，主要服务对象是广告主。
 
-广告和推荐的区别和联系
+**广告和推荐的区别和联系**<br>
+
 - 推荐主要服务对象是用户，提升用户体验，留存，点击率，toC业务；广告的服务对象是广告主，提升广告主转化，帮助广告主控制成本，toB业务。
 - 广告场景是一个“拍卖”场景，不同的广告主争抢一个优质广告位时，自然出现了--竞价。而推荐场景不需要竞价，推荐服务和内容其实是属于同一平台下，谁更适合用户，就推谁，没有商业化的衡量。
 - 推荐和广告的本质其实都是在有限的展示位下，为物料最优排序，推荐是物料可以是文章图片或者视频等，广告的物料就是广告主的广告。服务的最终目标就是效果转化，推荐的效果可以是点击率或者用户停留时长，广告的转化可以是点击，下载，安装等。
 - 推荐和广告其实是相辅相成的关系，好的信息流或者其他推荐服务提升用户留存，拉新，延长用户停留时长，相当于扩大了可供商业化变现的“养料”，好的广告服务，能给广告主带来优质流量，提升广告主的转化，吸引更多的广告主在该平台上投放广告，增大平台收入。
+
+**广告主，用户，广告平台，流量端的关系**<br>
+
+![](C:\Users\Jiang\Documents\GitHub\weiqi-jiang.github.io\assets\img\ads\ads-relationships.png)
+
+一般的广告平台和流量端其实是一家公司，例如网易有自己的广告平台，同时有网易新闻这类流量入口，但也存在第三方广告平台，集中接小广告主的需求，然后统一跟流量平台对接。
 
 ### 计费方式
 
