--- a/_posts/advertisement/2020-12-27-ads.md
+++ b/_posts/advertisement/2020-12-27-ads.md
@@ -27,7 +27,7 @@ description:
 
 **广告主，用户，广告平台，流量端的关系**<br>
 
-![](C:\Users\Jiang\Documents\GitHub\weiqi-jiang.github.io\assets\img\ads\ads-relationships.png)
+![](/assets/img/ads/ads-relationships.png)
 
 一般的广告平台和流量端其实是一家公司，例如网易有自己的广告平台，同时有网易新闻这类流量入口，但也存在第三方广告平台，集中接小广告主的需求，然后统一跟流量平台对接。
 
